# kabanos

./: Cargo.toml  README.md  char_too_long.kbs  grammar.bnf  main.kbs  main2.kbs  main3.kbs  new.txt  test.aka  test.kbs  unexpected_eof.kbs
errors/lexer/: bad_escape.kbs
errors/semantic/: arg_count.kbs  binop.kbs  fn_redefinition.kbs  invalid_binop.kbs  invalid_unop.kbs  lvalue.kbs  primitive.kbs  return_type.kbs  signature.kbs  type_mismatch.kbs  unaryop.kbs  undeclared.kbs  voidop.kbs
errors/syntax/: expression_expected.kbs  statement_expected.kbs  unexpected_eof.kbs  unexpected_token.kbs
kabanos_analyzer/: Cargo.toml
kabanos_analyzer/src/: error.rs  expression.rs  expression_builder.rs  lib.rs  module_builder.rs  operator.rs  statement_builder.rs  symbol.rs  types.rs
kabanos_codegen/: Cargo.toml
kabanos_codegen/src/: lib.rs  module.rs  statement.rs  types.rs
kabanos_common/: Cargo.toml
kabanos_common/src/: lexer.rs  lib.rs  span.rs  token.rs
kabanos_compiler/: Cargo.toml
kabanos_compiler/src/: main.rs
kabanos_lsp/: Cargo.toml  shutdown.txt
kabanos_lsp/src/: main.rs  messages.rs  reader.rs
kabanos_lsp/src/messages/: error.rs  mod.rs  notification.rs  request.rs  response.rs
src/: ast.rs  codegen.rs  lexer.rs  main.rs  operator.rs  parser.rs  semantic.rs  semantic.rs.old  symbol.rs.old  symbol_table.rs  token.rs  types.rs  value.rs
src/ast/: error.rs  expression.rs  mod.rs  parser.rs  statement.rs
src/codegen/: error.rs  statement.rs
src/semantic/: error.rs  expression.rs  from_ast.rs  mod.rs  operator.rs  primitive.rs  symbol.rs  (+1 more)
(+21 files in other folders)
